--- a/trunk/locale/en-US/prefwindow.dtd
+++ b/trunk/locale/en-US/prefwindow.dtd
@@ -1,8 +1,1 @@
-<!ENTITY prefwindow.title "Site Software Info preferences">
-<!ENTITY pane1.title "Site Software Info preferences">
-<!ENTITY checkboolpref.label "A Boolean Preference">
-<!ENTITY checkboolpref.accesskey "B">
-<!ENTITY intpref.label "An Integer Preference">
-<!ENTITY intpref.accesskey "I">
-<!ENTITY stringpref.label "A String Preference">
-<!ENTITY stringpref.accesskey "S">
+<!ENTITY prefwindow.title "BackendInfo Preferences">
